classDiagram
    class Grupo
    Grupo : +int id_grupo
    Grupo : +string id_regiao
    Grupo : +string ds_nome
    class Sessao
    Sessao : +int id_grupo
    Sessao : +int id_sessao
    Sessao : +string ds_nome
    Sessao : +int tp_sessao
    class SubSessao
    SubSessao : +int id_grupo
    SubSessao : +int id_sessao
    SubSessao : +int id_subsessao
    SubSessao : +string ds_nome
    SubSessao : +int id_lider
    SubSessao : +int id_sublider
    SubSessao : +Associado[] associados    
    Grupo --* Sessao 
    Sessao --* SubSessao
       